--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.6",
+    "@reduxjs/toolkit": "^1.9.1",
     "@tippyjs/react": "^4.2.6",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
@@ -31,6 +31,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
+    "tippy.js": "^6.3.7",
     "use-debounce": "^8.0.4"
   },
   "devDependencies": {
@@ -41,7 +42,6 @@
     "@vitejs/plugin-react": "^1.3.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "sass": "^1.51.0",
-    "vite": "^2.9.15",
     "vite-plugin-babel": "^1.0.0"
   }
 }
