--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "[my-framework] build --output public",
     "preview": "vite preview"
   },
   "dependencies": {
